# sites-aoi-analysis

./: .gitignore  AOI样例数据.xlsx  LICENSE  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  readme.md  site-analysis-api.spec  verify_subprocess_ui.py  基站站点样例数据.xlsx
.claude/: settings.local.json
.github/workflows/: release.yml
designs/: main.pen  progress.pen
docs/: WORKPLAN.md
e2e/: basic.spec.js
electron/: main.js  preload.js
electron/assets/: README.md  icon.icns
electron/renderer/: app.js  index.html  progressDom.js  progressState.js  style.css
electron/renderer/__tests__/: dom.test.js  progress.test.js  utils.test.js
scripts/: api_entry.py  generate_icons.py  generate_stress_data.py  issue_bot.py
src/site_analysis/: __init__.py
src/site_analysis/application/: __init__.py  analysis_service.py  aoi_coverage_analyzer.py  import_service.py
src/site_analysis/domain/: models.py  repositories.py  value_objects.py
src/site_analysis/infrastructure/: __init__.py
src/site_analysis/interfaces/: __init__.py  api.py  cli.py
tests/fixtures/: generate_large_data.py  generate_test_data.py
tests/integration/: legacy_reference.py  test_gui_launch.py  test_release_build.py  test_stress.py
tests/integration/application/: test_analysis_service.py
tests/integration/interfaces/: test_api.py  test_cleanup.py  test_large_file_support.py
tests/integration/legacy/: test_electron_launch.py
tests/integration/performance/: test_performance.py  test_stress_60k.py
tests/unit/: test_analysis_service_progress.py  test_api.py  test_column_mapping.py  test_excel_result_exporter_summary.py  test_gui_view_model.py  test_import_service.py  test_main.py  test_main_window.py  test_main_window_analyze.py  test_main_window_file_select.py  test_main_window_macos_deadlock.py  test_main_window_structure.py  test_mapping_frame.py  test_value_objects.py
tests/unit/application/: test_analysis_service_summary.py  test_import_service.py
tests/unit/domain/: test_analysis_summary.py  test_file_type.py  test_validation_result.py
tests/unit/infrastructure/: test_csv_repositories.py  test_excel_repositories_with_mapping.py  (+2 more)
(+20 files in other folders)
