[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-analysis"
version = "0.1.0"
description = "小区-AOI空间匹配与室内站宏站分析工具"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "geopandas",
    "shapely",
    "openpyxl",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
