[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-analysis"
version = "6.0.0"
description = "小区-AOI空间匹配与室内站宏站分析工具"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "geopandas",
    "shapely",
    "openpyxl",
    "scipy",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "ruff",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "release: marks tests that verify release build artifacts",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = ["src"]
files = ["src/site_analysis/domain", "src/site_analysis/application"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
